[package]
name = "optima"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
sysinfo = "0.39.6"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
self_update = { version = "0.39.0", features = ["archive-zip", "compression-zip-deflate"] }

[profile.release]
opt-level = "z"     # Tối ưu hóa dung lượng (Optimize for size)
lto = true          # Kích hoạt Link Time Optimization (Gộp code tốt hơn)
codegen-units = 1   # Compile trên 1 luồng để tối ưu dung lượng tối đa
panic = "abort"     # Gỡ bỏ thông báo lỗi panic dài dòng
strip = true        # Xóa toàn bộ thông tin Debug ẩn trong file
